--- a/session_2_task (7).ipynb
+++ b/session_2_task (7).ipynb
@@ -1,21 +1,10 @@
 {
-  "nbformat": 4,
-  "nbformat_minor": 0,
-  "metadata": {
-    "colab": {
-      "provenance": []
-    },
-    "kernelspec": {
-      "name": "python3",
-      "display_name": "Python 3"
-    },
-    "language_info": {
-      "name": "python"
-    }
-  },
   "cells": [
     {
       "cell_type": "markdown",
+      "metadata": {
+        "id": "w6RlOAXV2PWh"
+      },
       "source": [
         "### `Problem 1`: Write a program that will give you in hand monthly salary after deduction on CTC - HRA(10%), DA(5%), PF(3%) and taxes deduction as below:\n",
         "\n",
@@ -25,110 +14,163 @@
         "*   5-10 : 10%\n",
         "*   10-20 : 20%\n",
         "*   aboove 20 : 30%"
-      ],
-      "metadata": {
-        "id": "w6RlOAXV2PWh"
-      }
+      ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "# Write code here"
-      ],
+      "execution_count": null,
       "metadata": {
         "id": "7tMHvKYO2etI"
       },
-      "execution_count": null,
-      "outputs": []
+      "outputs": [],
+      "source": [
+        "salary=float(input(\"Enter salary(in lakhs) - \"))\n",
+        "hra=10\n",
+        "da=5\n",
+        "pf=3\n",
+        "if(salary<5):\n",
+        "    tax=0\n",
+        "elif(salary>=5 and salary<10):\n",
+        "    tax=10\n",
+        "elif(salary>=10 and salary<20):\n",
+        "    tax=20\n",
+        "else:\n",
+        "    tax=30            \n",
+        "in_hand_salary=salary-(salary*hra/100)-(salary*da/100)-(salary*pf/100)-(salary*tax/100)\n",
+        "print(in_hand_salary)"
+      ]
     },
     {
       "cell_type": "markdown",
-      "source": [
-        "### `Problem 2`: Write a program that take a user input of three angles and will find out whether it can form a triangle or not."
-      ],
       "metadata": {
         "id": "tYzCGqwl2hfN"
-      }
+      },
+      "source": [
+        "### `Problem 2`: Write a program that take a user input of three angles and will find out whether it can form a triangle or not."
+      ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "# Write code here"
-      ],
+      "execution_count": null,
       "metadata": {
         "id": "FYEqln-I2kxV"
       },
-      "execution_count": null,
-      "outputs": []
+      "outputs": [],
+      "source": [
+        "angle1=int(input(\"Enter 1st angle - \"))\n",
+        "angle2=int(input(\"Enter 2nd angle - \"))\n",
+        "angle3=int(input(\"Enter 3rd angle - \"))\n",
+        "if(angle1+angle2+angle3)==180:\n",
+        "    print(\"Can form a triangle\")\n",
+        "else:\n",
+        "    print(\"Cannot form a triangle\")    "
+      ]
     },
     {
       "cell_type": "markdown",
-      "source": [
-        "### `Problem 3`: Write a program that will take user input of cost price and selling price and determines whether its a loss or a profit."
-      ],
       "metadata": {
         "id": "5vEpPh8C2pE4"
-      }
+      },
+      "source": [
+        "### `Problem 3`: Write a program that will take user input of cost price and selling price and determines whether its a loss or a profit."
+      ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "# Write code here"
-      ],
+      "execution_count": null,
       "metadata": {
         "id": "jDwBXlkO2sfl"
       },
-      "execution_count": null,
-      "outputs": []
+      "outputs": [],
+      "source": [
+        "cost_price=float(input(\"Enter cost price - \"))\n",
+        "selling_price=float(input(\"Enter selling price - \"))\n",
+        "if(cost_price>selling_price):\n",
+        "    print(\"It's a loss - \",cost_price-selling_price)\n",
+        "elif(selling_price>cost_price):\n",
+        "    print(\"It's a profit - \",selling_price-cost_price)\n",
+        "else:\n",
+        "    print(\"No profit no loss\")        "
+      ]
     },
     {
       "cell_type": "markdown",
+      "metadata": {
+        "id": "J_FG_cJW2ugT"
+      },
       "source": [
         "### `Problem 4`: Write a menu-driven program -\n",
         "1. cm to ft\n",
         "2. km to miles\n",
         "3. USD to INR\n",
         "4. exit"
-      ],
-      "metadata": {
-        "id": "J_FG_cJW2ugT"
-      }
+      ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "# Write code here"
-      ],
+      "execution_count": null,
       "metadata": {
         "id": "yBHhaCGQ2zpD"
       },
-      "execution_count": null,
-      "outputs": []
+      "outputs": [],
+      "source": [
+        "while(1):\n",
+        "    print(\"1. cm to ft\")\n",
+        "    print(\"2. km to miles\")\n",
+        "    print(\"3. USD to INR\")\n",
+        "    print(\"4. exit\")\n",
+        "    print()\n",
+        "    choice=int(input(\"Enter choice - \"))\n",
+        "    if(choice==1):\n",
+        "        cm=float(input(\"Enter cm - \"))\n",
+        "        ft=cm/30.48\n",
+        "        print(\"ft -\",ft)\n",
+        "        print()\n",
+        "    elif(choice==2):\n",
+        "        km=float(input(\"Enter km - \"))\n",
+        "        miles=km*0.62137119\n",
+        "        print(\"miles -\",miles) \n",
+        "        print()\n",
+        "    elif(choice==3):\n",
+        "        USD=float(input(\"Enter USD - \"))\n",
+        "        INR=USD*85.28\n",
+        "        print(\"INR -\",INR)\n",
+        "        print()\n",
+        "    elif(choice==4):\n",
+        "        break\n",
+        "    else:\n",
+        "        print(\"RETRY\") \n",
+        "        print()\n",
+        "        continue         "
+      ]
     },
     {
       "cell_type": "markdown",
+      "metadata": {
+        "id": "LJJ30_Yw27ZU"
+      },
       "source": [
         "### `Problem 5` - Exercise 12: Display Fibonacci series up to 10 terms.\n",
         "\n",
         "*Note: The Fibonacci Sequence is a series of numbers. The next number is found by adding up the two numbers before it. The first two numbers are 0 and 1. For example, 0, 1, 1, 2, 3, 5, 8, 13, 21. The next number in this series above is 13+21 = 34*"
-      ],
-      "metadata": {
-        "id": "LJJ30_Yw27ZU"
-      }
+      ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "# Write code here"
-      ],
+      "execution_count": null,
       "metadata": {
         "id": "ae_1rpe52-5R"
       },
-      "execution_count": null,
-      "outputs": []
+      "outputs": [],
+      "source": [
+        "# Write code here"
+      ]
     },
     {
       "cell_type": "markdown",
+      "metadata": {
+        "id": "pk_I_S4m3PT5"
+      },
       "source": [
         "### `Problem 6` - Find the factorial of a given number.\n",
         "\n",
@@ -147,24 +189,24 @@
         "```bash\n",
         "120\n",
         "```"
-      ],
-      "metadata": {
-        "id": "pk_I_S4m3PT5"
-      }
+      ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "# Write code here"
-      ],
+      "execution_count": null,
       "metadata": {
         "id": "lzXxHegx3Rkc"
       },
-      "execution_count": null,
-      "outputs": []
+      "outputs": [],
+      "source": [
+        "# Write code here"
+      ]
     },
     {
       "cell_type": "markdown",
+      "metadata": {
+        "id": "-17IOi-g3UpU"
+      },
       "source": [
         "### `Problem 7` - Reverse a given integer number.\n",
         "\n",
@@ -181,24 +223,24 @@
         "```bash\n",
         "24567\n",
         "```"
-      ],
-      "metadata": {
-        "id": "-17IOi-g3UpU"
-      }
+      ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "# Write code here"
-      ],
+      "execution_count": null,
       "metadata": {
         "id": "wJwLpKCr3aVA"
       },
-      "execution_count": null,
-      "outputs": []
+      "outputs": [],
+      "source": [
+        "# Write code here"
+      ]
     },
     {
       "cell_type": "markdown",
+      "metadata": {
+        "id": "-t8PJQaY3sHf"
+      },
       "source": [
         "### `Problem 8`: Take a user input as integer N. Find out the sum from 1 to N. If any number if divisible by 5, then skip that number. And if the sum is greater than 300, don't need to calculate the sum further more. Print the final result. And don't use for loop to solve this problem.\n",
         "\n",
@@ -215,85 +257,85 @@
         "```bash\n",
         "276\n",
         "```"
-      ],
-      "metadata": {
-        "id": "-t8PJQaY3sHf"
-      }
+      ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "# Write code here"
-      ],
+      "execution_count": null,
       "metadata": {
         "id": "GZB6mGMP3ujT"
       },
-      "execution_count": null,
-      "outputs": []
+      "outputs": [],
+      "source": [
+        "# Write code here"
+      ]
     },
     {
       "cell_type": "markdown",
-      "source": [
-        "### `Problem 9`: Write a program that keeps on accepting a number from the user until the user enters Zero. Display the sum and average of all the numbers."
-      ],
       "metadata": {
         "id": "Q7ggImeA3xm4"
-      }
+      },
+      "source": [
+        "### `Problem 9`: Write a program that keeps on accepting a number from the user until the user enters Zero. Display the sum and average of all the numbers."
+      ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "# Write code here"
-      ],
+      "execution_count": null,
       "metadata": {
         "id": "t_YDSZDe4Kdo"
       },
-      "execution_count": null,
-      "outputs": []
+      "outputs": [],
+      "source": [
+        "# Write code here"
+      ]
     },
     {
       "cell_type": "markdown",
-      "source": [
-        "###`Problem 9`: Write a program which will find all such numbers which are divisible by 7 but are not a multiple of 5, between 2000 and 3200 (both included). The numbers obtained should be printed in a comma-separated sequence on a single line."
-      ],
       "metadata": {
         "id": "6EhvEMvm4R7s"
-      }
+      },
+      "source": [
+        "###`Problem 9`: Write a program which will find all such numbers which are divisible by 7 but are not a multiple of 5, between 2000 and 3200 (both included). The numbers obtained should be printed in a comma-separated sequence on a single line."
+      ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "# Write code here"
-      ],
+      "execution_count": null,
       "metadata": {
         "id": "d6RgP1B34T6c"
       },
-      "execution_count": null,
-      "outputs": []
+      "outputs": [],
+      "source": [
+        "# Write code here"
+      ]
     },
     {
       "cell_type": "markdown",
+      "metadata": {
+        "id": "tYvmRR-G4Vp4"
+      },
       "source": [
         "###`Problem 10`: Write a program, which will find all such numbers between 1000 and 3000 (both included) such that each digit of the number is an even number. The numbers obtained should be printed in a space-separated sequence on a single line.\n",
         "\n"
-      ],
-      "metadata": {
-        "id": "tYvmRR-G4Vp4"
-      }
+      ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "# Write code here"
-      ],
+      "execution_count": null,
       "metadata": {
         "id": "k6Gs1kIf4k19"
       },
-      "execution_count": null,
-      "outputs": []
+      "outputs": [],
+      "source": [
+        "# Write code here"
+      ]
     },
     {
       "cell_type": "markdown",
+      "metadata": {
+        "id": "GV18IINT4mf5"
+      },
       "source": [
         "###`Problem 11`: A robot moves in a plane starting from the original point (0,0). The robot can move toward UP, DOWN, LEFT and RIGHT with a given steps.\n",
         "The trace of robot movement is shown as the following:\n",
@@ -326,66 +368,66 @@
         "```\n",
         "2\n",
         "```"
-      ],
-      "metadata": {
-        "id": "GV18IINT4mf5"
-      }
+      ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "# Write code here"
-      ],
+      "execution_count": null,
       "metadata": {
         "id": "6UNMC2aR4w5x"
       },
-      "execution_count": null,
-      "outputs": []
+      "outputs": [],
+      "source": [
+        "# Write code here"
+      ]
     },
     {
       "cell_type": "markdown",
-      "source": [
-        "###`Problem 12`:Write a program to print whether a given number is a prime number or not"
-      ],
       "metadata": {
         "id": "3fsAIAhK5GYY"
-      }
+      },
+      "source": [
+        "###`Problem 12`:Write a program to print whether a given number is a prime number or not"
+      ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "# Write code here"
-      ],
+      "execution_count": null,
       "metadata": {
         "id": "j6y91lxy5LZs"
       },
-      "execution_count": null,
-      "outputs": []
+      "outputs": [],
+      "source": [
+        "# Write code here"
+      ]
     },
     {
       "cell_type": "markdown",
+      "metadata": {
+        "id": "asAbmbK-5NHv"
+      },
       "source": [
         "###`Problem 13`:Print all the Armstrong numbers in a given range.\n",
         "Range will be provided by the user<br>\n",
         "Armstrong number is a number that is equal to the sum of cubes of its digits. For example 0, 1, 153, 370, 371 and 407 are the Armstrong numbers."
-      ],
-      "metadata": {
-        "id": "asAbmbK-5NHv"
-      }
+      ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "# Write code here"
-      ],
+      "execution_count": null,
       "metadata": {
         "id": "PZuI67pm5jCT"
       },
-      "execution_count": null,
-      "outputs": []
+      "outputs": [],
+      "source": [
+        "# Write code here"
+      ]
     },
     {
       "cell_type": "markdown",
+      "metadata": {
+        "id": "ClCQZMqT7gK0"
+      },
       "source": [
         "###`Problem 14`:Calculate the angle between the hour hand and minute hand.\n",
         "\n",
@@ -398,45 +440,56 @@
         "Explanation:<br>\n",
         "The minimum angle between hour and minute\n",
         "hand when the time is 9 is 90 degress."
-      ],
-      "metadata": {
-        "id": "ClCQZMqT7gK0"
-      }
+      ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "# Write code here"
-      ],
+      "execution_count": null,
       "metadata": {
         "id": "tNBTCZML7jy_"
       },
-      "execution_count": null,
-      "outputs": []
+      "outputs": [],
+      "source": [
+        "# Write code here"
+      ]
     },
     {
       "cell_type": "markdown",
+      "metadata": {
+        "id": "GwacF9Co72Qc"
+      },
       "source": [
         "###`Problem 15`:Given two rectangles, find if the given two rectangles overlap or not. A rectangle is denoted by providing the x and y coordinates of two points: the left top corner and the right bottom corner of the rectangle. Two rectangles sharing a side are considered overlapping. (L1 and R1 are the extreme points of the first rectangle and L2 and R2 are the extreme points of the second rectangle).\n",
         "\n",
         "Note: It may be assumed that the rectangles are parallel to the coordinate axis.\n",
         "\n",
         "<img src='https://www.geeksforgeeks.org/wp-content/uploads/rectanglesOverlap.png' width='300' height='200'>"
-      ],
-      "metadata": {
-        "id": "GwacF9Co72Qc"
-      }
+      ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "# Write code here"
-      ],
+      "execution_count": null,
       "metadata": {
         "id": "6rrw_lpH78Rs"
       },
-      "execution_count": null,
-      "outputs": []
+      "outputs": [],
+      "source": [
+        "# Write code here"
+      ]
     }
-  ]
+  ],
+  "metadata": {
+    "colab": {
+      "provenance": []
+    },
+    "kernelspec": {
+      "display_name": "Python 3",
+      "name": "python3"
+    },
+    "language_info": {
+      "name": "python"
+    }
+  },
+  "nbformat": 4,
+  "nbformat_minor": 0
 }
