--- a/session_7_task (3).ipynb
+++ b/session_7_task (3).ipynb
@@ -1,21 +1,10 @@
 {
-  "nbformat": 4,
-  "nbformat_minor": 0,
-  "metadata": {
-    "colab": {
-      "provenance": []
-    },
-    "kernelspec": {
-      "name": "python3",
-      "display_name": "Python 3"
-    },
-    "language_info": {
-      "name": "python"
-    }
-  },
   "cells": [
     {
       "cell_type": "markdown",
+      "metadata": {
+        "id": "FyUJ3PRAsPr4"
+      },
       "source": [
         "##`Q-1:` Rectangle Class\n",
         "1. Write a Rectangle class in Python language, allowing you to build a rectangle with length and width attributes.\n",
@@ -23,13 +12,13 @@
         "2. Create a Perimeter() method to calculate the perimeter of the rectangle and a Area() method to calculate the area of ​​the rectangle.\n",
         "\n",
         "3. Create a method display() that display the length, width, perimeter and area of an object created using an instantiation on rectangle class."
-      ],
-      "metadata": {
-        "id": "FyUJ3PRAsPr4"
-      }
+      ]
     },
     {
       "cell_type": "markdown",
+      "metadata": {
+        "id": "GxUtOqJfssFK"
+      },
       "source": [
         "Eg.\n",
         "After making above classes and methods, on executing below code:-\n",
@@ -45,24 +34,24 @@
         "The perimeter of rectangle is:  14\n",
         "The area of rectangle is:  12\n",
         "```\n"
-      ],
-      "metadata": {
-        "id": "GxUtOqJfssFK"
-      }
+      ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "# write your code here"
-      ],
+      "execution_count": null,
       "metadata": {
         "id": "92_QT-Uj6NBg"
       },
-      "execution_count": null,
-      "outputs": []
+      "outputs": [],
+      "source": [
+        "# write your code here"
+      ]
     },
     {
       "cell_type": "markdown",
+      "metadata": {
+        "id": "r_GxrS0Vrdom"
+      },
       "source": [
         "##`Q-2: Bank Class`\n",
         "\n",
@@ -73,13 +62,13 @@
         "5. Create an `bankFees()` method to apply the bank fees with a percentage of 5% of the balance account.\n",
         "6. Create a `display()` method to display account details.\n",
         "Give the complete code for the  BankAccount class."
-      ],
-      "metadata": {
-        "id": "r_GxrS0Vrdom"
-      }
+      ]
     },
     {
       "cell_type": "markdown",
+      "metadata": {
+        "id": "qvVkOUJgvTV_"
+      },
       "source": [
         "Eg.\n",
         "After making above classes and methods, on executing below code:-\n",
@@ -99,24 +88,24 @@
         "Account Name :  Mandy\n",
         "Account Balance :  3100 ₹\n",
         "```"
-      ],
-      "metadata": {
-        "id": "qvVkOUJgvTV_"
-      }
+      ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "# write your code here"
-      ],
+      "execution_count": null,
       "metadata": {
         "id": "fUQOmQyA6YDR"
       },
-      "execution_count": null,
-      "outputs": []
+      "outputs": [],
+      "source": [
+        "# write your code here"
+      ]
     },
     {
       "cell_type": "markdown",
+      "metadata": {
+        "id": "QovcQAZTrgGU"
+      },
       "source": [
         "##`Q-3:Computation class`\n",
         "\n",
@@ -132,24 +121,24 @@
         "5. Create a `tableMult()` method which creates and displays the multiplication table of a given integer. Then create an `allTablesMult()` method to display all the integer multiplication tables 1, 2, 3, ..., 9.\n",
         "\n",
         "6. Create a static `listDiv()` method that gets all the divisors of a given integer on new list called  Ldiv. Create another `listDivPrim()` method that gets all the prime divisors of a given integer."
-      ],
-      "metadata": {
-        "id": "QovcQAZTrgGU"
-      }
+      ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "# write your code here"
-      ],
+      "execution_count": null,
       "metadata": {
         "id": "YEkPH70l6Z-o"
       },
-      "execution_count": null,
-      "outputs": []
+      "outputs": [],
+      "source": [
+        "# write your code here"
+      ]
     },
     {
       "cell_type": "markdown",
+      "metadata": {
+        "id": "0yn23_oEriXa"
+      },
       "source": [
         "##`Q-4`: Build flashcard using class in Python.\n",
         "\n",
@@ -177,24 +166,62 @@
         "Correct answer\n",
         "Enter 0, if you want to play again: 1\n",
         "```"
-      ],
-      "metadata": {
-        "id": "0yn23_oEriXa"
-      }
+      ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "# write your code here"
-      ],
+      "execution_count": 1,
       "metadata": {
         "id": "vCrUF6VU6l6w"
       },
-      "execution_count": null,
-      "outputs": []
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "welcome to fruit quiz\n",
+            "What is the color of Apple\n",
+            "Correct guess\n",
+            "\n",
+            "welcome to fruit quiz\n",
+            "What is the color of Pineapple\n",
+            "Correct guess\n",
+            "\n"
+          ]
+        }
+      ],
+      "source": [
+        "import random\n",
+        "class FlashCard:\n",
+        "  def __init__(self):\n",
+        "    self.Fruits={\"Banana\":\"yellow\",\"Apple\":\"red\",\"Ripe Mango\":\"green\",\"Papaya\":\"pink\",\"Strawberry\":\"red\",\"Blueberry\":\"dark blue\",\"Pineapple\":\"yellow\"}\n",
+        "  def random_guess(self):\n",
+        "    self.fruits=list(self.Fruits.keys())\n",
+        "    self._fruit=random.choice(self.fruits)\n",
+        "    self._color=self.Fruits.get(self._fruit)\n",
+        "    print(\"welcome to fruit quiz\")\n",
+        "    print(f\"What is the color of {self._fruit}\")\n",
+        "    self.guess()\n",
+        "  def guess(self):\n",
+        "    self.your_guess=input(\"\")\n",
+        "    if self.your_guess == f\"{self._color}\":\n",
+        "      print(\"Correct guess\")\n",
+        "    else:\n",
+        "      print(\"Wrong guess\")\n",
+        "    enter=int(input(\"Enter 0,  if you want to play again:\"))\n",
+        "    print()\n",
+        "    if enter == 0:\n",
+        "      self.random_guess()\n",
+        "\n",
+        "f1=FlashCard()\n",
+        "f1.random_guess()      "
+      ]
     },
     {
       "cell_type": "markdown",
+      "metadata": {
+        "id": "GN2r0jbRewYr"
+      },
       "source": [
         "## `Q-5:` Problem 5 based on OOP Python.\n",
         "\n",
@@ -214,21 +241,41 @@
         "\n",
         "Represent a few objects of the class, initialize instance variables using setter methods, invoke\n",
         "appropriate methods and test your program."
-      ],
-      "metadata": {
-        "id": "GN2r0jbRewYr"
-      }
+      ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "# write your code here"
-      ],
+      "execution_count": null,
       "metadata": {
         "id": "pdMFuVFnlvKL"
       },
-      "execution_count": null,
-      "outputs": []
+      "outputs": [],
+      "source": [
+        "# write your code here"
+      ]
     }
-  ]
+  ],
+  "metadata": {
+    "colab": {
+      "provenance": []
+    },
+    "kernelspec": {
+      "display_name": "Python 3",
+      "name": "python3"
+    },
+    "language_info": {
+      "codemirror_mode": {
+        "name": "ipython",
+        "version": 3
+      },
+      "file_extension": ".py",
+      "mimetype": "text/x-python",
+      "name": "python",
+      "nbconvert_exporter": "python",
+      "pygments_lexer": "ipython3",
+      "version": "3.13.3"
+    }
+  },
+  "nbformat": 4,
+  "nbformat_minor": 0
 }
